...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QKy-tA-3MM">
                                <rect key="frame" x="0.0" y="119" width="375" height="548"/>
                            </scrollView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HbK-BD-bLH">
                                <rect key="frame" x="-4" y="607" width="383" height="60"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FAVORITES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDw-qL-nkY">
                                        <rect key="frame" x="66" y="13" width="251" height="35"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HbK-BD-bLH" secondAttribute="bottom" id="ayQ-ez-doj"/>
                            <constraint firstItem="QKy-tA-3MM" firstAttribute="top" secondItem="hl2-LD-ob4" secondAttribute="bottom" id="cHh-Pg-HUF"/>
                            <constraint firstAttribute="trailing" secondItem="QKy-tA-3MM" secondAttribute="trailing" id="d3w-py-4v9"/>
                            <constraint firstItem="hl2-LD-ob4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="k2M-4M-DpA"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Reddit Walls" id="vMX-iu-Epb">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="settingsgear" id="BMS-K1-Z4Z">
                            <connections>
                                <segue destination="ZIU-rO-bCX" kind="presentation" id="2RB-Z3-LWD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="redditsView" destination="hl2-LD-ob4" id="uz0-nz-rIC"/>
                        <outlet property="wallpapersScrollView" destination="QKy-tA-3MM" id="gAu-q8-sJR"/>
                        <segue destination="aZy-E9-5py" kind="show" identifier="Favorites" id="IlU-st-s0r"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                <tapGestureRecognizer id="X41-cq-iSJ">
                    <connections>
                        <action selector="tappedFavorites:" destination="BYZ-38-t0r" id="zLO-s4-dnA"/>
...
                            <constraint firstItem="obP-28-ImM" firstAttribute="top" secondItem="VvU-Oa-yEq" secondAttribute="bottom" id="BCQ-C3-baP"/>
                            <constraint firstItem="VvU-Oa-yEq" firstAttribute="leading" secondItem="riB-7h-a2U" secondAttribute="leading" id="esG-1t-tk9"/>
                            <constraint firstItem="VvU-Oa-yEq" firstAttribute="top" secondItem="riB-7h-a2U" secondAttribute="top" id="gxG-Tb-uuM"/>
                            <constraint firstAttribute="trailing" secondItem="VvU-Oa-yEq" secondAttribute="trailing" id="rzr-sS-kJO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="jCH-JS-mdB">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="xUg-0c-lSB">
                            <connections>
                                <action selector="tappedDone:" destination="AJA-Og-nBD" id="Bhm-Y6-Qyi"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
