...
    let notificationCenter = NotificationCenter.default

    override func viewDidLoad() {
        super.viewDidLoad()
        setUpWallpapersViewControllers()
        notificationCenter.addObserver(self, selector: #selector(updateRedditsViewTheme), name: .themeUpdated, object: nil)
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "Back", style: .plain, target: nil, action: nil)
        redditsView.delegate = self
        wallpapersScrollView.delegate = self
        wallpapersScrollView.isPagingEnabled = true
        updateRedditsViewTheme()
    }

...
